tests/build/cases/widget_new/missing_semi_in_when1.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when1.rs:16:13
   |
16 |             cursor = CursorIcon::Pointer;
   |             ^^^^^^
